--- a/staffpos1.html
+++ b/staffpos1.html
@@ -33,7 +33,6 @@
         <p id="order-info"></p>
         <button id="complete-button">Complete Order</button>
     </div>
-
     <audio id="alert-sound" src="225661-ComputerSFX-alerts-071.wav" preload="auto"></audio>
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
@@ -49,7 +48,7 @@
                 .eq('status', 'pending');
 
             if (error) {
-                console.error(error);
+                console.error('Error loading orders:', error);
                 return;
             }
 
@@ -62,8 +61,8 @@
                 
                 const acceptButton = document.createElement('button');
                 acceptButton.innerText = 'Accept';
-                acceptButton.addEventListener('click', () => showOrderDetails(order));
-
+                acceptButton.addEventListener('click', () => acceptOrder(order.id));
+                
                 li.appendChild(acceptButton);
                 orderItems.appendChild(li);
             });
@@ -75,7 +74,7 @@
                 .select('*');
 
             if (error) {
-                console.error(error);
+                console.error('Error loading drink stats:', error);
                 return;
             }
 
@@ -106,13 +105,14 @@
         }
 
         async function acceptOrder(id) {
+            console.log(`Accepting order with ID: ${id}`);
             const { data, error } = await supabase
                 .from('orders')
                 .update({ status: 'inprogress' })
                 .match({ id });
 
             if (error) {
-                console.error(error);
+                console.error('Error updating order status:', error);
                 return;
             }
 
@@ -133,13 +133,14 @@
         }
 
         async function completeOrder(id) {
+            console.log(`Completing order with ID: ${id}`);
             const { data, error } = await supabase
                 .from('orders')
                 .delete()
                 .match({ id });
 
             if (error) {
-                console.error(error);
+                console.error('Error completing order:', error);
                 return;
             }
 
