--- a/staffpos1.html
+++ b/staffpos1.html
@@ -65,7 +65,7 @@
     <script>
         // Initialize Supabase
    const supabase = window.supabase.createClient('https://utgmmvofnginuwvzajig.supabase.co', 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InV0Z21tdm9mbmdpbnV3dnphamlnIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MjE5NTczMzksImV4cCI6MjAzNzUzMzMzOX0.YWH5Ceiz0OI_h8M6wG1M2UsDXM_43i5UdopmYLGO7aE');
-  const alertSound = document.getElementById('alert-sound');
+       const alertSound = document.getElementById('alert-sound');
 
         async function loadOrders() {
             const { data: orders, error } = await supabase
@@ -135,10 +135,7 @@
             }
 
             // Play sound for alert
-            if (!document.body.classList.contains('bartender')) {
-                alertSound.play();
-            }
-            alert('Order is in progress');
+            alert('Accepted order.');
 
             // Notify user via serverless function
             await fetch('/api/notify-user', {
@@ -180,10 +177,7 @@
             }
 
             // Play sound for alert
-            if (!document.body.classList.contains('bartender')) {
-                alertSound.play();
-            }
-            alert('Order completed. Please notify the user to pick up.');
+            alert('Order completed. Notifying user to pick up.');
 
             // Notify user via serverless function
             await fetch('/api/complete-order', {
@@ -204,6 +198,8 @@
         document.addEventListener('DOMContentLoaded', () => {
             loadOrders();
         });
+                    // Check for new orders every 5 seconds
+setInterval(loadOrders, 5000);
     </script>
 </body>
 </html>
