--- a/index.html
+++ b/index.html
@@ -7,13 +7,74 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            padding: 20px;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f9;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
         }
         #menu, #order-form {
-            margin: 20px;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            width: 300px;
+            text-align: center;
         }
         button {
+            background-color: #007BFF;
+            border: none;
+            border-radius: 5px;
+            color: #fff;
+            cursor: pointer;
+            font-size: 16px;
+            padding: 10px 20px;
             margin-top: 10px;
+            transition: background-color 0.3s;
+        }
+        button:hover {
+            background-color: #0056b3;
+        }
+        #order-message {
+            margin-top: 15px;
+            font-weight: bold;
+        }
+        .popup {
+            display: none;
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            width: 250px;
+            z-index: 1000;
+        }
+        .popup.show {
+            display: block;
+        }
+        .popup .title {
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
+        .popup .message {
+            margin-bottom: 15px;
+        }
+        .popup button {
+            background-color: #dc3545;
+            border: none;
+            border-radius: 5px;
+            color: #fff;
+            cursor: pointer;
+            padding: 10px;
+            font-size: 14px;
+        }
+        .popup button:hover {
+            background-color: #c82333;
         }
     </style>
 </head>
@@ -36,13 +97,27 @@
         </form>
         <p id="order-message"></p>
     </div>
+
+    <!-- Popup notifications -->
+    <div id="inprogress-popup" class="popup">
+        <div class="title">Order Update</div>
+        <div class="message">Your order is now in progress.</div>
+        <button onclick="closePopup('inprogress-popup')">Close</button>
+    </div>
+    <div id="completed-popup" class="popup">
+        <div class="title">Order Update</div>
+        <div class="message">Your order is ready for pickup.</div>
+        <button onclick="closePopup('completed-popup')">Close</button>
+    </div>
+
     <audio id="progress-sound" src="225661-ComputerSFX-alerts-071.wav" preload="auto"></audio>
     <audio id="completed-sound" src="225661-ComputerSFX-alerts-071.wav" preload="auto"></audio>
+
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
     <script>
         // Initialize Supabase
         const supabase = window.supabase.createClient('https://utgmmvofnginuwvzajig.supabase.co', 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InV0Z21tdm9mbmdpbnV3dnphamlnIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MjE5NTczMzksImV4cCI6MjAzNzUzMzMzOX0.YWH5Ceiz0OI_h8M6wG1M2UsDXM_43i5UdopmYLGO7aE');
-     const progressSound = document.getElementById('progress-sound');
+        const progressSound = document.getElementById('progress-sound');
         const completedSound = document.getElementById('completed-sound');
 
         document.getElementById('order-button').addEventListener('click', () => {
@@ -74,6 +149,23 @@
             }, 3000);
         });
 
+        function showPopup(popupId) {
+            const popup = document.getElementById(popupId);
+            if (popup) {
+                popup.classList.add('show');
+                setTimeout(() => {
+                    popup.classList.remove('show');
+                }, 5000); // Hide the popup after 5 seconds
+            }
+        }
+
+        function closePopup(popupId) {
+            const popup = document.getElementById(popupId);
+            if (popup) {
+                popup.classList.remove('show');
+            }
+        }
+
         // Poll for order status
         async function checkOrderStatus() {
             const userOrderId = localStorage.getItem('orderId');
@@ -90,7 +182,7 @@
                         if (!localStorage.getItem('completeNotify')) {
                             localStorage.setItem('completeNotify', 'true');
                             completedSound.play(); // Play sound for completed
-                            alert('Your order is ready for pickup');
+                            showPopup('completed-popup');
                             localStorage.removeItem('orderId');
                             localStorage.removeItem('pendingNotify');
                             localStorage.removeItem('inprogressNotify');
@@ -107,13 +199,13 @@
                         if (!localStorage.getItem('inprogressNotify')) {
                             localStorage.setItem('inprogressNotify', 'true');
                             progressSound.play(); // Play sound for in progress
-                            alert('Your order is now in progress');
+                            showPopup('inprogress-popup');
                         }
                     } else if (order.status === 'completed') {
                         if (!localStorage.getItem('completeNotify')) {
                             localStorage.setItem('completeNotify', 'true');
                             completedSound.play(); // Play sound for completed
-                            alert('Your order is ready for pickup');
+                            showPopup('completed-popup');
                             localStorage.removeItem('orderId');
                             localStorage.removeItem('pendingNotify');
                             localStorage.removeItem('inprogressNotify');
